# JVM-Observatory-Runtime-Profiling-Memory-Leak-Detection-Framework

./: .gitignore  docker-compose.yml  pom.xml
.claude/: settings.local.json
allocation-tracker/: pom.xml
allocation-tracker/src/main/java/com/jvmobservatory/tracker/: AllocationSite.java  AllocationTracker.java  ClassStats.java
analysis-service/: analysis_engine.py  heap_anomaly_detector.py  leak_ranker.py  requirements.txt  test_heap_anomaly_detector.py  test_leak_ranker.py
demo-app/: pom.xml
demo-app/src/main/java/com/jvmobservatory/demo/: DemoApp.java
gc-monitor/: pom.xml
gc-monitor/src/main/java/com/jvmobservatory/gc/: GCEventBus.java  GCEventMonitor.java  GCRecord.java  HeapSample.java  HeapUsageTracker.java
heap-analyzer/: pom.xml
heap-analyzer/src/main/java/com/jvmobservatory/heap/: DominatorTreeBuilder.java  HeapGraph.java  LeakAnalyzer.java  LeakSuspect.java  ObjectNode.java
java-agent/: pom.xml
java-agent/src/main/java/com/jvmobservatory/agent/: AllocationSampler.java  ConstructorInterceptor.java  InstrumentationHolder.java  LeakAgent.java  NativeEventBridge.java
metrics-api/: pom.xml
metrics-api/src/main/java/com/jvmobservatory/api/: MetricsApiApplication.java
metrics-api/src/main/java/com/jvmobservatory/api/controller/: MetricsController.java
metrics-api/src/main/java/com/jvmobservatory/api/dto/: ClassAllocationDTO.java  FlamegraphNode.java  GCStatsDTO.java  HeapSampleDTO.java  LeakSuspectDTO.java
metrics-api/src/main/java/com/jvmobservatory/api/error/: GlobalExceptionHandler.java
metrics-api/src/main/java/com/jvmobservatory/api/kafka/: EventConsumer.java
metrics-api/src/main/java/com/jvmobservatory/api/service/: AllocationService.java  GCStatsService.java  LeakSuspectService.java
metrics-api/src/main/resources/: application.yml
native-agent/: CMakeLists.txt  jvm_observatory_agent.def
native-agent/include/: agent.h  ring_buffer.h
native-agent/src/: agent.cpp  jvmti_events.cpp  ring_buffer.cpp
telemetry-pipeline/: pom.xml
telemetry-pipeline/src/main/java/com/jvmobservatory/telemetry/: AlertEvent.java  AllocationSample.java  MetricsAggregator.java  TelemetryConsumer.java  TelemetryProducer.java
visualization/: index.html  package-lock.json  package.json  vite.config.js
visualization/src/: App.css  App.jsx  api.js  main.jsx
visualization/src/components/: AllocationFlamegraph.jsx  GCPauseChart.jsx  HeapTrendChart.jsx  LeakSuspectTable.jsx
visualization/src/test/: AllocationFlamegraph.test.js  App.test.jsx  GCPauseChart.test.js  LeakSuspectTable.test.jsx
